--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-    "name": "estrivault-blog-app",
-    "private": true,
-    "dependencies": {
-        "@cloudinary/url-gen": "^1.21.0"
-    }
+  "name": "estrivault-blog-app",
+  "private": true,
+  "scripts": {
+    "dev:astro-blog": "npm --prefix apps/astro-blog run dev"
+  },
+  "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0"
+  }
 }
