--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "cloudinary-utils",
+  "name": "@estrivault/cloudinary-utils",
   "version": "0.1.0",
-  "main": "index.ts",
-  "module": "index.ts",
-  "types": "index.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "private": true,
+  "scripts": {
+    "build": "tsc --project ./tsconfig.json"
+  },
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0"
   },
   "exports": {
     ".": {
-      "import": "./index.ts",
-      "require": "./index.ts"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "devDependencies": {
+    "tsup": "^8.0.0"
+  },
+  "typesVersions": {
+    "*": {
+      "*": ["./dist/index.d.ts"]
     }
   }
 }
