--- a/apps/astro-blog/package.json
+++ b/apps/astro-blog/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "astro": "^5.7.4",
-    "@estrivault/remark-cloudinary-images": "workspace:*"
+    "@estrivault/remark-cloudinary-images": "workspace:*",
+    "@estrivault/cloudinary-utils": "workspace:*"
   }
 }
