--- a/packages/remark-cloudinary-images/tsconfig.json
+++ b/packages/remark-cloudinary-images/tsconfig.json
@@ -5,7 +5,11 @@
     "target": "ES2020",
     "moduleResolution": "node",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "@estrivault/cloudinary-utils": ["../cloudinary-utils/dist"]
+    }
   },
   "include": ["src"]
 }
