--- a/apps/astro-blog/package.json
+++ b/apps/astro-blog/package.json
@@ -14,8 +14,12 @@
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
-    "astro": "^5.7.4",
+    "@estrivault/cloudinary-utils": "workspace:*",
     "@estrivault/remark-cloudinary-images": "workspace:*",
-    "@estrivault/cloudinary-utils": "workspace:*"
+    "astro": "^5.7.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.4",
+    "tailwindcss": "^4.1.4"
   }
 }
