Initialize Svelte blog app with testing, linting and Tailwind setup

--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "devDependencies": {
     "dotenv-cli": "^8.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
