Add dev script for svelte-blog package

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "estrivault-blog-app",
   "private": true,
   "scripts": {
-    "dev:astro-blog": "pnpm --filter @estrivault/astro-blog dev"
+    "dev:astro-blog": "pnpm --filter @estrivault/astro-blog dev",
+    "dev": "pnpm --filter svelte-blog dev"
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0"
