fix: content-processorパッケージに@types/node型定義を追加

--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -7,11 +7,14 @@
   "exports": {
     ".": "./dist/index.js"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --dts",
     "test": "vitest"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^22.14.1"
+  }
 }
