--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -10,13 +10,17 @@
       "require": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm",
     "test": "vitest"
   },
   "dependencies": {
+    "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
+    "hast-util-sanitize": "^5.0.1",
     "reading-time": "^1.5.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
@@ -24,14 +28,12 @@
     "remark-directive": "^3.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
-    "unified": "^11.0.4",
-    "glob": "^10.3.10",
-    "hast-util-sanitize": "^5.0.1"
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.3",
     "vitest": "^1.1.0"
   }
 }
