--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -19,11 +19,14 @@
     }
   },
   "devDependencies": {
-    "tsup": "^8.0.0"
+    "tsup": "^8.0.0",
+    "typescript": "^5.8.3"
   },
   "typesVersions": {
     "*": {
-      "*": ["./dist/index.d.ts"]
+      "*": [
+        "./dist/index.d.ts"
+      ]
     }
   }
 }
