--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -28,7 +28,8 @@
     "remark-directive": "^3.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
-    "unified": "^11.0.4"
+    "unified": "^11.0.4",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
