--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -21,6 +21,7 @@
     "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
     "hast-util-sanitize": "^5.0.1",
+    "mdast": "^3.0.0",
     "reading-time": "^1.5.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
@@ -29,9 +30,11 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
     "unified": "^11.0.4",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "vfile": "^6.0.1"
   },
   "devDependencies": {
+    "@types/mdast": "^4.0.4",
     "@types/node": "^20.11.0",
     "tsup": "^8.0.1",
     "typescript": "^5.8.3",
