add: ブログアプリの初期構造とCloudinary画像処理機能を実装

--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "tsup": "^8.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@types/node": "^22.14.1"
   },
   "typesVersions": {
     "*": {
