--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -20,8 +20,7 @@
   },
   "devDependencies": {
     "tsup": "^8.0.0",
-    "typescript": "^5.8.3",
-    "@types/node": "^22.14.1"
+    "typescript": "^5.8.3"
   },
   "typesVersions": {
     "*": {
