--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -18,9 +18,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@estrivault/cloudinary-utils": "workspace:*",
     "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
-    "hast-util-sanitize": "^5.0.1",
+    "hast-util-sanitize": "^5.0.0",
     "mdast": "^3.0.0",
     "reading-time": "^1.5.0",
     "rehype-raw": "^7.0.0",
@@ -31,14 +32,14 @@
     "remark-rehype": "^11.0.0",
     "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0",
-    "vfile": "^6.0.1",
-    "@estrivault/cloudinary-utils": "workspace:*"
+    "vfile": "^6.0.1"
   },
   "devDependencies": {
     "@types/mdast": "^4.0.4",
     "@types/node": "^22.14.1",
+    "@vitest/coverage-v8": "^3.1.3",
     "tsup": "^8.0.1",
     "typescript": "^5.8.3",
-    "vitest": "^1.1.0"
+    "vitest": "^3.1.3"
   }
 }
