add: マークダウンパーサーのユニットテストとVitestの設定を追加

--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -15,7 +15,10 @@
   ],
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@estrivault/cloudinary-utils": "workspace:*",
