--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -1,32 +1,23 @@
 {
   "name": "@estrivault/cloudinary-utils",
   "version": "0.1.0",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "type": "module",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "private": true,
+  "files": ["dist"],
   "scripts": {
-    "build": "tsc --project ./tsconfig.json"
-  },
-  "dependencies": {
-    "@cloudinary/url-gen": "^1.21.0"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "clean": "rm -rf dist"
   },
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
   "devDependencies": {
     "tsup": "^8.0.0",
     "typescript": "^5.8.3"
-  },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/index.d.ts"
-      ]
-    }
   }
 }
