--- a/packages/cloudinary-utils/tsconfig.json
+++ b/packages/cloudinary-utils/tsconfig.json
@@ -2,14 +2,17 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "declaration": true,
-    "declarationMap": true,
     "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": "."
+    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["index.ts", "presets.ts"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
