--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@cloudinary/url-gen": "^1.21.0"
   },
   "devDependencies": {
-    "dotenv-cli": "^8.0.0"
+    "dotenv-cli": "^8.0.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
