--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -14,11 +14,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "build": "tsup"
   },
   "dependencies": {
     "@estrivault/cloudinary-utils": "workspace:*",
@@ -42,9 +38,8 @@
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "@types/node": "^22.15.18",
-    "@vitest/coverage-v8": "^3.1.3",
+    "fast-glob": "^3.3.3",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.3"
+    "typescript": "^5.8.3"
   }
 }
