--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@estrivault/cloudinary-utils": "workspace:*",
+    "glob": "11.0.2",
     "gray-matter": "^4.0.3",
     "hast-util-sanitize": "^5.0.2",
     "mdast": "^3.0.0",
@@ -38,7 +39,6 @@
     "@types/mdast": "^4.0.4",
     "@types/node": "^22.15.18",
     "tsup": "^8.5.0",
-    "fast-glob": "^3.3.3",
     "typescript": "^5.8.3"
   }
 }
