fix: PostCardでCloudinary画像変換ユーティリティ経由の画像URL生成に修正

--- a/apps/svelte-blog/package.json
+++ b/apps/svelte-blog/package.json
@@ -17,6 +17,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@estrivault/cloudinary-utils": "workspace:^",
     "@estrivault/content-processor": "workspace:*"
   },
   "devDependencies": {
