--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -18,6 +18,9 @@
       "types": "./dist/index.d.ts"
     }
   },
+  "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0"
+  },
   "devDependencies": {
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
