--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@estrivault/cloudinary-utils": "workspace:*",
-    "glob": "11.0.2",
+    "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "hast-util-sanitize": "^5.0.2",
     "mdast": "^3.0.0",
@@ -38,6 +38,7 @@
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "@types/node": "^22.15.18",
+    "@types/unist": "^3.0.3",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
