--- a/apps/svelte-blog/package.json
+++ b/apps/svelte-blog/package.json
@@ -24,7 +24,7 @@
     "@eslint/compat": "^1.3.0",
     "@eslint/js": "^9.29.0",
     "@playwright/test": "^1.53.0",
-    "@sveltejs/adapter-static": "^3.0.8",
+    "@sveltejs/adapter-vercel": "^5.7.2",
     "@sveltejs/kit": "^2.21.5",
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "@tailwindcss/typography": "^0.5.16",
