--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
+  "framework": "sveltekit",
   "installCommand": "pnpm install",
-  "buildCommand": "pnpm run build:all"
+  "buildCommand": "pnpm run build:all",
+  "outputDirectory": "apps/svelte-blog/.svelte-kit/output/client"
 }
