--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "installCommand": "pnpm install",
-  "buildCommand": "pnpm run build:all",
-  "outputDirectory": "apps/svelte-blog/.svelte-kit/output/client",
-  "framework": "sveltekit"
+  "buildCommand": "pnpm run build:all"
 }
