--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "installCommand": "pnpm install",
-  "buildCommand": "pnpm run build:all",
+  "buildCommand": "pnpm run build",
   "outputDirectory": "apps/svelte-blog/build",
   "framework": "sveltekit"
 }
