--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "installCommand": "pnpm install",
   "buildCommand": "pnpm run build",
-  "outputDirectory": ".vercel/output",
+  "outputDirectory": "apps/svelte-blog/.vercel/output",
   "framework": "sveltekit"
 }
