--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "pnpm install",
-  "buildCommand": "pnpm run build",
-  "outputDirectory": "apps/svelte-blog/.svelte-kit/output",
-  "framework": "sveltekit"
+  "installCommand": "pnpm install --frozen-lockfile",
+  "buildCommand": "pnpm -r --filter svelte-blog... run build"
 }
