feat: GitHubコントリビューターの取得

--- a/apps/svelte-blog/.env.example
+++ b/apps/svelte-blog/.env.example
@@ -1,1 +1,7 @@
 PUBLIC_CLOUDINARY_CLOUD_NAME=your-cloud-name
+
+# GitHub API Configuration
+# Personal access token for GitHub API (required for contributors feature)
+# Create at: https://github.com/settings/tokens
+# Required scopes: public_repo (for public repositories)
+GITHUB_TOKEN=your-github-personal-access-token-here
