--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -23,6 +23,7 @@
     "hast-util-sanitize": "^5.0.2",
     "mdast": "^3.0.0",
     "reading-time": "^1.5.0",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
@@ -30,6 +31,7 @@
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
+    "shiki": "^3.7.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.3"
