--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,10 +3,18 @@
   "useTabs": false,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "es5",
+  "trailingComma": "all",
+  "semi": true,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "avoid",
+  "endOfLine": "lf",
+  "quoteProps": "as-needed",
+  "experimentalTernaries": true,
   "svelteSortOrder": "options-scripts-markup-styles",
-  "svelteStrictMode": false,
-  "svelteBracketNewLine": true,
+  "svelteStrictMode": true,
+  "svelteBracketNewLine": false,
   "svelteIndentScriptAndStyle": true,
+  "svelteAllowShorthand": true,
   "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"]
 }
