--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,7 +7,7 @@
   "semi": true,
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "endOfLine": "lf",
   "quoteProps": "as-needed",
   "experimentalTernaries": true,
@@ -16,5 +16,8 @@
   "svelteBracketNewLine": false,
   "svelteIndentScriptAndStyle": true,
   "svelteAllowShorthand": true,
-  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"]
+  "plugins": [
+    "prettier-plugin-svelte",
+    "prettier-plugin-tailwindcss"
+  ]
 }
