Refactor code structure for improved readability and maintainability

--- a/apps/svelte-blog/package.json
+++ b/apps/svelte-blog/package.json
@@ -10,8 +10,7 @@
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "format": "prettier --write .",
-    "lint": "prettier --check . && eslint .",
+    "lint": "eslint .",
     "test:unit": "vitest",
     "test": "npm run test:unit -- --run && npm run test:e2e",
     "test:e2e": "playwright test"
@@ -36,9 +35,6 @@
     "eslint-plugin-svelte": "^3.9.3",
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
-    "prettier": "^3.6.0",
-    "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.13",
     "sass-embedded": "^1.89.2",
     "svelte": "^5.34.7",
     "svelte-check": "^4.2.2",
