--- a/apps/svelte-blog/tsconfig.json
+++ b/apps/svelte-blog/tsconfig.json
@@ -1,15 +1,8 @@
 {
-  "extends": "./.svelte-kit/tsconfig.json",
+  "extends": ["../../tsconfig.json", "./.svelte-kit/tsconfig.json"],
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "moduleResolution": "bundler"
+    "checkJs": true
   }
   // Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
   // except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
