--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:packages": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor run build",
     "validate:workspace": "node scripts/validate-workspace.js",
     "postinstall": "pnpm run build:packages",
-    "clean": "pnpm --filter @estrivault/cloudinary-utils run clean && rm -rf packages/content-processor/dist",
+    "clean": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor run clean",
     "reset": "pnpm run clean && pnpm install && pnpm run build:packages",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -19,6 +19,9 @@
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
+    "type-check:packages": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor exec tsc --noEmit",
+    "lint:packages": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor exec eslint src/",
+    "format:packages": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor exec prettier --write src/",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "prettier": "^3.6.0",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0"
   },
