--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -21,8 +21,5 @@
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0"
   },
-  "devDependencies": {
-    "tsup": "^8.5.0",
-    "typescript": "^5.8.3"
-  }
+  "devDependencies": {}
 }
