--- a/packages/content-processor/tsconfig.json
+++ b/packages/content-processor/tsconfig.json
@@ -3,9 +3,8 @@
   "compilerOptions": {
     "moduleResolution": "Node",
     "outDir": "dist",
-    "rootDir": "src",
-    "composite": true
+    "rootDir": "src"
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
