fix: ビルドコマンドを簡素化し、ワークスペース検証メッセージを更新

--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "node scripts/dev-helper.js",
-    "dev:quick": "pnpm run build:packages && concurrently \"pnpm run dev:packages\" \"pnpm --filter svelte-blog dev\"",
-    "dev:safe": "pnpm run validate:workspace && pnpm run dev:quick",
-    "dev:packages": "pnpm --filter @estrivault/cloudinary-utils run dev",
     "build": "pnpm -r --filter svelte-blog... run build",
-    "build:packages": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor run build",
     "validate:workspace": "node scripts/validate-workspace.js",
-    "postinstall": "pnpm run build:packages",
+    "postinstall": "pnpm run build",
     "clean": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor run clean",
-    "reset": "pnpm run clean && pnpm install && pnpm run build:packages",
+    "reset": "pnpm run clean && pnpm install && pnpm run build",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
