--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -18,7 +18,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@estrivault/cloudinary-utils": "workspace:*",
+    "@estrivault/cloudinary-utils": "workspace:^",
     "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "hast-util-sanitize": "^5.0.2",
