fix: tsupのバージョンを8.5.0に更新し、@types/nodeのバージョンを24.0.4に変更

--- a/packages/cloudinary-utils/package.json
+++ b/packages/cloudinary-utils/package.json
@@ -21,5 +21,7 @@
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "tsup": "^8.5.0"
+  }
 }
