--- a/packages/content-processor/package.json
+++ b/packages/content-processor/package.json
@@ -19,13 +19,11 @@
   },
   "dependencies": {
     "@estrivault/cloudinary-utils": "workspace:^",
-    "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "hast-util-sanitize": "^5.0.2",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.14.1",
     "rehype-raw": "^7.0.0",
-    "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-directive": "^4.0.0",
     "remark-gfm": "^4.0.1",
@@ -33,8 +31,7 @@
     "remark-rehype": "^11.1.2",
     "shiki": "^3.7.0",
     "unified": "^11.0.5",
-    "unist-util-visit": "^5.0.0",
-    "vfile": "^6.0.3"
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/hast": "^3.0.4",
