--- a/apps/svelte-blog/package.json
+++ b/apps/svelte-blog/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.53.1",
-    "@sveltejs/adapter-vercel": "^5.7.2",
+    "@sveltejs/adapter-cloudflare": "^7.0.4",
     "@sveltejs/kit": "^2.22.0",
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "@tailwindcss/typography": "^0.5.16",
