--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,7 @@
-name = "svelte-blog"
-compatibility_date = "2024-01-01"
+name = "estrilda"
 
-pages_build_output_dir = "apps/svelte-blog/.svelte-kit/cloudflare"
+pages_build_output_dir = ".svelte-kit/cloudflare"
 
 [build]
-command = "pnpm -r --filter svelte-blog... run build"
-cwd = "."
+command = "pnpm run build"
+cwd = "apps/svelte-blog"
