--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "node scripts/dev-helper.js",
     "build": "pnpm -r --filter svelte-blog... run build",
-    "deploy": "wrangler pages deploy apps/svelte-blog/.svelte-kit/cloudflare",
     "build:packages": "pnpm --filter @estrivault/cloudinary-utils --filter @estrivault/content-processor run build",
     "dev:packages": "pnpm --filter @estrivault/cloudinary-utils run dev",
     "validate:workspace": "node scripts/validate-workspace.js",
@@ -33,8 +32,7 @@
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "wrangler": "^4.22.0"
+    "typescript-eslint": "^8.35.0"
   },
   "lint-staged": {
     "**/*.{js,ts,svelte}": [
