refactor: [site]セクションを[assets]に変更し、ディレクトリ設定を整理

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 name = "estrilda"
 
-[site]
-bucket = "apps/svelte-blog/.svelte-kit/cloudflare"
+[assets]
+directory = "apps/svelte-blog/.svelte-kit/cloudflare"
 
 [build]
 command = "pnpm -r --filter svelte-blog... run build"
