--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,10 +2,11 @@
   "name": "Anthropic Claude Code",
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu24.04",
   "features": {
-    "ghcr.io/anthropics/devcontainer-features/claude-code:latest": {},
+    "ghcr.io/devcontainers/features/node:1": {},
     "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/devcontainers-community/npm-features/typescript": {}
   },
+  "postCreateCommand": "npm install -g @anthropic-ai/claude-code@latest",
   "customizations": {
     "vscode": {
       "settings": {
