--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -1,7 +1,14 @@
 {
   "plugins": ["@textlint/markdown"],
   "rules": {
-    "preset-ja-technical-writing": true,
+    "preset-ja-technical-writing": {
+      "sentence-length": false,
+      "ja-no-weak-phrase": false,
+      "no-mix-dearu-desumasu": {
+        "preferInDescriptiveText": "ですます調",
+        "preferInListItem": "ですます調"
+      }
+    },
     "@textlint-ja/textlint-rule-preset-ai-writing": true
   }
 }
